Only synchronize the cursor position when the cursor line has changed

This only applies to actual changes in the cursor position and not when re-synchronizing
after a compilation, for example.

BUG: 305254